Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.4.7.12: Oct 10, 2008 (2 hours after 0.4.7.11 ;)

* security fix; force cwd to something controlled for ebuild env.  This
  blocks an attack detailed in glsa 200810-02; namely that an ebuild invoking
  python -c (which looks in cwd for modules to load) allows for an attacker
  to slip something in.


pkgcore 0.4.7.11: Oct 10, 2008

* fix EAPI2 issues: default related primarily, invoke src_prepare for
  >=EAPI2 instead of >EAPI2.


pkgcore 0.4.7.10: Oct 7, 2008

* fix in setup.py to install eapi/* files.
  die distutils, die.

* api for depset inspection for tristate (pcheck visibility mode) is fixed
  to not tell the consumer to lovingly 'die in a fire'.

* correct a failure in EAPI=2 src_uri parsing complaining about
  missing checksums for nonexistant files


pkgcore 0.4.7.9: Oct 6, 2008

* eapi2 is now supported.

* DepSet has grown a temp option named allow_src_uri_file_names; this
  is to support eapi 2's -> SRC_URI extension.  This functionality
  will under go refactoring in the coming days- as such the api addition
  isn't considered stable.

* we now match the forced phase ordering portage induced via breaking
  eapi compatibilty for eapi0/1.

* tightened up allowed atom syntax; repository dep is available only when
  eapi is unspecified (no longer available in eapi2 in other words).
  atom USE dep parsing now requires it to follow slotting- this is done to
  match the other EAPI2 standard.

  Beyond that, better error msgs and tighter validation.


pkgcore 0.4.7.8: August 28, 2008

* pkgcore now properly preserves ownership of symlinks on merging.
  ensure_perms plugins now need to handle symlinks (lchown at the least).

* free resolver caches after resolution is finished; lower the memory
  baseline for pmerge.

* fix up interface definitions for >snakeoil-0.2 dependant_methods changes.